--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,17 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  height: 100vh;
+}
+.divBox {
+  border-bottom: 2px solid black;
+  border-radius: 10%;
+
+  text-align: center;
+  margin: 0;
+  padding: 5%;
+}
+h3 {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
